
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct net_device {int dummy; } ;
struct atl2_adapter {int hw; } ;


 int atl2_check_eeprom_exist (int *) ;
 struct atl2_adapter* netdev_priv (struct net_device*) ;

__attribute__((used)) static int atl2_get_eeprom_len(struct net_device *netdev)
{
 struct atl2_adapter *adapter = netdev_priv(netdev);

 if (!atl2_check_eeprom_exist(&adapter->hw))
  return 512;
 else
  return 0;
}
